Refactored BookQueryBuilder tests